add in config and control server

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif8266
 board = huzzah
 framework = arduino
-
 monitor_speed = 115200
+monitor_echo = yes
+lib_deps = 
+	erriez/ErriezCRC32@^1.0.1
