--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = huzzah
+
 [env:huzzah]
 platform = espressif8266
 board = huzzah
@@ -16,3 +19,12 @@ monitor_speed = 115200
 monitor_echo = yes
 lib_deps = 
 	erriez/ErriezCRC32@^1.0.1
+extra_scripts = 
+  pre:scripts/load_env.py
+  pre:scripts/include_ota_key.py
+
+[env:huzzah_ota]
+extends = env:huzzah
+extra_scripts = scripts/sign_firmware.py
+upload_protocol = espota
+upload_port = ${sysenv.OTA_HOST}
