overhaul Led and up; patch bugs in server/client; add logger/debug tools

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ default_envs = huzzah
 platform = espressif8266
 board = huzzah
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 9600
 monitor_echo = yes
 lib_deps = 
 	erriez/ErriezCRC32@^1.0.1
@@ -23,8 +23,12 @@ extra_scripts =
   pre:scripts/load_env.py
   pre:scripts/include_ota_key.py
 
+[env:huzzah_debug]
+extends = env:huzzah
+build_flags = -DDEBUG=1
+
 [env:huzzah_ota]
 extends = env:huzzah
 extra_scripts = scripts/sign_firmware.py
 upload_protocol = espota
-upload_port = ${sysenv.OTA_HOST}
+upload_port = 192.168.1.65
